# energy-trading

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: config.yaml  strategies.yaml
docs/: ALGORITHMS.md  API.md
docs/images/: README.txt
notebooks/: 01_data_exploration.ipynb  02_price_forecasting.ipynb  03_strategy_backtesting.ipynb  04_portfolio_optimization.ipynb  05_renewable_energy_analysis.ipynb
notebooks/data/processed/synthetic_prices_20230101_20231231/year=2023/month=1/: 94e601d9982d4d57a444b1b5125399af-0.parquet
notebooks/data/processed/synthetic_prices_20230101_20231231/year=2023/month=10/: 94e601d9982d4d57a444b1b5125399af-0.parquet
notebooks/data/processed/synthetic_prices_20230101_20231231/year=2023/month=11/: 94e601d9982d4d57a444b1b5125399af-0.parquet
notebooks/data/processed/synthetic_prices_20230101_20231231/year=2023/month=12/: 94e601d9982d4d57a444b1b5125399af-0.parquet
notebooks/data/processed/synthetic_prices_20230101_20231231/year=2023/month=2/: 94e601d9982d4d57a444b1b5125399af-0.parquet
notebooks/data/processed/synthetic_prices_20230101_20231231/year=2023/month=3/: 94e601d9982d4d57a444b1b5125399af-0.parquet
notebooks/data/processed/synthetic_prices_20230101_20231231/year=2023/month=4/: 94e601d9982d4d57a444b1b5125399af-0.parquet
notebooks/data/processed/synthetic_prices_20230101_20231231/year=2023/month=5/: 94e601d9982d4d57a444b1b5125399af-0.parquet
notebooks/data/processed/synthetic_prices_20230101_20231231/year=2023/month=6/: 94e601d9982d4d57a444b1b5125399af-0.parquet
notebooks/data/processed/synthetic_prices_20230101_20231231/year=2023/month=7/: 94e601d9982d4d57a444b1b5125399af-0.parquet
notebooks/data/processed/synthetic_prices_20230101_20231231/year=2023/month=8/: 94e601d9982d4d57a444b1b5125399af-0.parquet
notebooks/data/processed/synthetic_prices_20230101_20231231/year=2023/month=9/: 94e601d9982d4d57a444b1b5125399af-0.parquet
notebooks/data/processed/synthetic_solar_20230101_20231231/year=2023/month=1/: 771af67710284bf2b800cb9c63b2245d-0.parquet
notebooks/data/processed/synthetic_solar_20230101_20231231/year=2023/month=10/: 771af67710284bf2b800cb9c63b2245d-0.parquet
notebooks/data/processed/synthetic_solar_20230101_20231231/year=2023/month=11/: 771af67710284bf2b800cb9c63b2245d-0.parquet
src/: __init__.py
src/backtesting/: __init__.py  engine.py  metrics.py  reporting.py
src/config/: load_config.py
src/dashboard/: __init__.py  app.py  utils.py
src/dashboard/pages/: 1_Market_Overview.py  2_Price_Forecasts.py  3_Trading_Strategies.py  4_Portfolio_Optimization.py  5_Risk_Analytics.py
src/data/: __init__.py  data_fetcher.py  data_manager.py  data_utils.py  renewable_generator.py  synthetic_generator.py
src/models/: __init__.py  feature_engineering.py  price_forecasting.py  renewable_forecasting.py
src/optimization/: __init__.py  optimizer.py  risk_analytics.py  risk_reporting.py
src/strategies/: __init__.py  base_strategy.py  mean_reversion.py  momentum.py  renewable_arbitrage.py  spread_trading.py  strategy_loader.py
tests/: __init__.py  conftest.py
tests/test_backtesting/: test_engine.py  test_metrics.py
tests/test_data/: test_data_fetcher.py  test_data_manager.py  test_renewable_generator.py  test_synthetic_generator.py
tests/test_integration/: test_data_pipeline.py  test_forecasting_workflow.py  test_optimization_workflow.py  test_strategy_backtesting_workflow.py
tests/test_models/: test_feature_engineering.py  test_price_forecasting.py
tests/test_optimization/: test_optimizer.py  test_risk_analytics.py  test_specific_optimizers.py
tests/test_strategies/: test_base_strategy.py  test_mean_reversion.py  test_renewable_arbitrage.py
(+21 files in other folders)
